2015-09-30  Andy Buckley  <andy.buckley@cern.ch>

	* src/Ipol.h: Use Eigen/SVD include path rather than non-standard eigen3/Eigen/SVD.

2015-09-14  Holger Schulz  <holger.schulz@durham.ac.uk>

	* Use Eigen's svd.setThreshold(1e-20) to prevent the errors we saw with Eigen
	3.2.2 and later when looking at 5th order polynomials in 3 dimensinos
	with 900+ anchors

	* Some clean up

2015-09-11  Andy Buckley  <andy.buckley@cern.ch>

	* Adding prof2-residuals script for ipol faithfulness testing.

	* Rename scripts from prof-* to prof2-* to allow parallel installations of Prof1 and Prof2.

	* Move some non-core scripts from bin to contrib.

	* Make root-config dependency optional

	* Lots of reworking to make prof-tune work again, and to use weight file parsing.

2015-09-10  Andy Buckley  <andy.buckley@cern.ch>

	* Use weight file path parsing in prof-ipol.

	* Add prof.weights submodule, with a copy of PointMatcher and a
	new read_pointmatchers function for handling weight files.

	* Provide __version__attribute in the Python module.

	* User script CLI consistency, simplification, general smoothing...

2015-08-30  Andy Buckley  <andy.buckley@cern.ch>

	* Add recursive scangrid generator function, and other tweaks.

2015-08-18  Andy Buckley  <andy.buckley@cern.ch>

	* Tweaks to ipol file parsing functions.

	* Fix a bug in IpolBin's use of interpolated errors.

	* Convert mean and median error parameterisation to use new 0th order ipols.

2015-08-15  Holger Schulz  <holger.schulz@durham.ac.uk>

	* A first version of catching singular matrices in the SVD

	* Ipol has 1 additional argument, "threshold", that determines what
	singular values are considered 0, fully propagated to pyext

	* Going 2 Pro 2 Fessional

	* Some startup checks of prof- scripts

	* remove bin/prof-sampling, rename prof-prediction -> prof-predict

2015-08-13  Holger Schulz  <holger.schulz@durham.ac.uk>

	* Reverted unintended commit of hack.

	* Added very basic prof-config script to bin
